force-app/main/default/objects/Contract/fields/TypeOfContract__c.field-meta.xml
<CustomField>
    <fullName>TypeOfContract__c</fullName>
    <label>Tipo de contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>CONTRATO MARCO DE PRODUCTOS Y SERVICIOS BANCARIOS MÚLTIPLES</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>CONTRATO DE MEDIACIÓN MERCANTIL PARA LA DISTRIBUCIÓN INTEGRAL DE ACCIONES DE SOCIEDADES DE INVERSIÓN Y PARA LA ADMINISTRACIÓN DE UN PLAN PERSONAL DE RETIRO</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>CONTRATO DE MEDIACIÓN MERCANTIL PARA LA DISTRIBUCIÓN INTEGRAL DE ACCIONES DE SOCIEDADES DE INVERSIÓN Y PARA LA ADMINISTRACIÓN DE UNA CUENTA PERSONAL PARA EL AHORRO</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>CONTRATO MARCO DE COMPRAVENTA DE DIVISAS (BANCO)</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>CONTRATO DE DEPÓSITOS BANCARIOS DE DINERO A LA VISTA PARA EL PÚBLICO EN GENERAL (CUENTA BÁSICA ACTINVER)</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>CONTRATO DE DEPÓSITOS BANCARIOS DE DINERO A LA VISTA PARA EL PÚBLICO EN GENERAL (CUENTA BÁSICA DE NÓMINA ACTINVER)</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>TRADICIONAL DE INTERMEDIACIÓN BURSÁTIL</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>PLAN PERSONAL DE RETIRO</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>CONTRATO CUENTA LÍQUIDA ACTINVER</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Bursanet</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Bursanet.</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Bursanet,</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>DINN</label>
            </value>
            <value>
                <fullName>62</fullName>
                <label>Banco Persona Moral</label>
            </value>
            <value>
                <fullName>63</fullName>
                <label>Banco Persona  Moral</label>
            </value>
            <value>
                <fullName>64</fullName>
                <label>Banco  Persona Moral</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>