force-app/main/default/objects/Contract/fields/TypeOfFund__c.field-meta.xml
<CustomField>
    <fullName>TypeOfFund__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de fondo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>