force-app/main/default/objects/Contract/fields/Val_Bco__c.field-meta.xml
<CustomField>
    <fullName>Val_Bco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Val Bco</label>
    <type>Checkbox</type>
</CustomField>