force-app/main/default/objects/Contract/fields/Val_Cb__c.field-meta.xml
<CustomField>
    <fullName>Val_Cb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Val Cb</label>
    <type>Checkbox</type>
</CustomField>