force-app/main/default/objects/Contract/fields/Valuacion__c.field-meta.xml
<CustomField>
    <fullName>Valuacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valuación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>